force-app/main/default/objects/WorkType/fields/Duration_Based_on_Min_Crew_Size__c.field-meta.xml
<CustomField>
    <fullName>Duration_Based_on_Min_Crew_Size__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field created as part of AD0-12129</description>
    <label>Duration Based on Min Crew Size</label>
    <type>Checkbox</type>
</CustomField>