force-app/main/default/objects/WorkType/fields/Is_Visible_to_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible_to_Call_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this check box is checked, work type is shared with call center role.</description>
    <label>Is Visible to Call Center</label>
    <type>Checkbox</type>
</CustomField>