force-app/main/default/objects/WorkType/fields/SFS_Gantt_Icon__c.field-meta.xml
<CustomField>
    <fullName>SFS_Gantt_Icon__c</fullName>
    <description>Stores the Gantt Icon URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gantt Icon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>